Rewrite index.md a little, fix a line-wrapping bug in markdown rendering.

--- a/github-pages/stylesheets/stylesheet.css
+++ b/github-pages/stylesheets/stylesheet.css
@@ -490,7 +490,7 @@ header h2 {
 
 #main-content {
   float: left;
-  width: 690px;
+  width: 590px;
 }
 
 #main-content img {
